[gd_scene load_steps=11 format=3 uid="uid://bl0fgo0cgp7to"]

[ext_resource type="Script" uid="uid://sakgu2mc0hkc" path="res://scripts/npc/robo.gd" id="1_o1aei"]
[ext_resource type="Texture2D" uid="uid://f4rmeehgdscl" path="res://assets/Personagens/Robo/robopixilart-sprite.png" id="2_6hxgg"]
[ext_resource type="Texture2D" uid="uid://cay8u8k71gyss" path="res://assets/Personagens/Robo/new_atlas_texture.tres" id="2_p85xh"]
[ext_resource type="FontFile" uid="uid://dhq1kbwvasqme" path="res://assets/pixel_Fonte/pixelart.ttf" id="3_6hxgg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ppr7n"]
atlas = ExtResource("2_6hxgg")
region = Rect2(224, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_c5eo2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_p85xh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ppr7n")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_dgilk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p85xh"]
size = Vector2(64, 59)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_37itm"]
bg_color = Color(0.0117647, 0.0117647, 0.0117647, 0.470588)

[sub_resource type="LabelSettings" id="LabelSettings_37itm"]
font = ExtResource("3_6hxgg")
shadow_size = 7
shadow_color = Color(0, 0, 0, 1)

[node name="robo" type="CharacterBody2D"]
script = ExtResource("1_o1aei")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -14)
sprite_frames = SubResource("SpriteFrames_c5eo2")
frame_progress = 0.207038

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -11)
shape = SubResource("CircleShape2D_dgilk")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -9.5)
shape = SubResource("RectangleShape2D_p85xh")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CaixaDialogo" type="Label" parent="CanvasLayer"]
offset_left = 65.0
offset_top = 228.0
offset_right = 585.0
offset_bottom = 324.0
theme_override_styles/normal = SubResource("StyleBoxFlat_37itm")
autowrap_mode = 2

[node name="TextoDialogo" type="Label" parent="CanvasLayer"]
offset_left = 147.0
offset_top = 254.0
offset_right = 581.0
offset_bottom = 319.0
theme_override_font_sizes/font_size = 14
vertical_alignment = 1
autowrap_mode = 2

[node name="Timer" type="Timer" parent="CanvasLayer"]

[node name="Nomelabel" type="Label" parent="CanvasLayer"]
offset_left = 147.0
offset_top = 231.0
offset_right = 245.0
offset_bottom = 254.0

[node name="Retrato" type="TextureRect" parent="CanvasLayer"]
offset_left = 73.0
offset_top = 248.0
offset_right = 133.0
offset_bottom = 307.0
stretch_mode = 5

[node name="LabelIntera√ßao" type="Label" parent="."]
offset_left = -21.0
offset_top = -56.0
offset_right = 19.0
offset_bottom = -33.0
label_settings = SubResource("LabelSettings_37itm")
horizontal_alignment = 1

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
